// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly with props 1`] = `
<DocumentFragment>
  <button
    class="button Button__test"
    disabled=""
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button component should render correctly without props 1`] = `
<DocumentFragment>
  <button
    class="button "
    type="button"
  >
    Default Button
  </button>
</DocumentFragment>
`;
